--- a/index.html
+++ b/index.html
@@ -341,14 +341,16 @@
                   <p>Собираемые данные: </p>
                   <ul>
                     <li>Наименование компании, БИН/ИИН, банковские реквизиты, юридический адрес;</li> 
-                      <li>Сертификаты на товары (в виде файлов); Сайт (если имеется);</li>  
+                      <li>Сертификаты на товары (в виде файлов); <li>
+                        <li>Сайт (если имеется);</li>  
                         <li>ФИО представителя, должность, корпоративный e-mail, рабочий телефон.</li> 
                     </ul>
                   <p>Цели обработки: </p>
                    <ul>
                     <li>Верификация и заключение договора с юридическим лицом;</li> 
-                      <li> Администрирование аккаунта; Обеспечение обратной связи и коммуникации между сторонами;</li> 
-                        <li> Соблюдение требований законодательства РК в части бухгалтерского и налогового учета.</li> </ul>
+                      <li> Администрирование аккаунта;</li> 
+                      <li> Обеспечение обратной связи и коммуникации между сторонами;</li> 
+                      <li> Соблюдение требований законодательства РК в части бухгалтерского и налогового учета.</li> </ul>
                 </li>
                 <li>
                   <em>3.2. Данные Торговых точек (мобильное приложение)</em>
@@ -405,8 +407,14 @@
             <li>
               <strong>7. Права субъекта персональных данных</strong>
               <ol>
-                <li>7.1. Пользователь имеет право: получать информацию о своих персональных данных, обрабатываемых Оператором; требовать уточнения, блокирования или уничтожения данных, если они являются неполными, устаревшими или незаконно полученными; отзывать согласие на обработку персональных данных; инициировать удаление аккаунта через мобильное приложение или по запросу на e-mail sauda_tech@outlook.com. Запросы обрабатываются в течение 10 (десяти) рабочих дней с момента получения. Уведомление о результате направляется Пользователю по e-mail или в интерфейсе Сервиса.</li>
-                <li>7.2. После удаления аккаунта данные Пользователя уничтожаются, за исключением сведений, подлежащих хранению в соответствии с законодательством Республики Казахстан (например, данные о финансовых операциях и накладных).</li>
+                <li>
+                  <p>7.1. Пользователь имеет право: </p>
+                  <ul> 
+                    <li>получать информацию о своих персональных данных, обрабатываемых Оператором;</li>
+                    <li>требовать уточнения, блокирования или уничтожения данных, если они являются неполными, устаревшими или незаконно полученными; </li>
+                    <li>отзывать согласие на обработку персональных данных; </li>
+                    <li>инициировать удаление аккаунта через мобильное приложение или по запросу на e-mail sauda_tech@outlook.com. Запросы обрабатываются в течение 10 (десяти) рабочих дней с момента получения. Уведомление о результате направляется Пользователю по e-mail или в интерфейсе Сервиса.</li>
+                <li>7.2. После удаления аккаунта данные Пользователя уничтожаются, за исключением сведений, подлежащих хранению в соответствии с законодательством Республики Казахстан (например, данные о финансовых операциях и накладных).</li></ul></li>
               </ol>
             </li}$.
 
