--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                   <em>3.2. Сауда нүктелерінің деректері (мобильді қосымша)</em>
                   <p>Жинақталатын деректер:</p>
                   <ul>
-                    <li>Дүкеннің атауы, заңды және нақты мекенжайлары;</li>
+                    <li>Дүкеннің атауы, категориясы, БСН/ЖСН, заңды және нақты мекенжайлары;</li>
                     <li>Аймақ, қала, байланыс телефоны және корпоративтік пошта;</li>
                     <li>Өкілдің Т.А.Ә., дүкеннің жұмыс уақыты;</li>
                     <li>Есептік жазба деректері: логин (e-mail), телефон, хэштелген пароль.</li>
@@ -262,7 +262,12 @@
             <li>
               <strong>7. Дербес деректер субъектісінің құқықтары</strong>
               <ol>
-                <li>7.1. Пайдаланушының құқығы бар: Оператор өңдейтін өзінің дербес деректері туралы ақпарат алуға; Деректер толық емес, ескірген немесе заңсыз алынған болса, оларды нақтылауды, бұғаттауды немесе жоюды талап етуге; Дербес деректерді өңдеуге берілген келісімді қайтарып алуға; Мобильді қосымша арқылы немесе sauda_tech@outlook.com электрондық поштасына сұрау салу арқылы есептік жазбаны жоюға бастама жасауға. Сұрау салулар түскен сәттен бастап 10 (он) жұмыс күні ішінде өңделеді. Нәтижесі туралы хабарлама Пайдаланушыға e-mail немесе Сервис интерфейсі арқылы жіберіледі.</li>
+                <li> <p>7.1. Пайдаланушының құқығы бар: </p>
+                  <ul>
+                <li>Оператор өңдейтін өзінің дербес деректері туралы ақпарат алуға;</li>
+                <li>Деректер толық емес, ескірген немесе заңсыз алынған болса, оларды нақтылауды, бұғаттауды немесе жоюды талап етуге;</li>
+                <li>Дербес деректерді өңдеуге берілген келісімді қайтарып алуға;</li> 
+                <li>Мобильді қосымша арқылы немесе sauda_tech@outlook.com электрондық поштасына сұрау салу арқылы есептік жазбаны жоюға бастама жасауға. Сұрау салулар түскен сәттен бастап 10 (он) жұмыс күні ішінде өңделеді. Нәтижесі туралы хабарлама Пайдаланушыға e-mail немесе Сервис интерфейсі арқылы жіберіледі.</li></li></ul>
                 <li>7.2. Есептік жазба жойылғаннан кейін Пайдаланушының деректері, Қазақстан Республикасының заңнамасына сәйкес сақталуға жататын мәліметтерді қоспағанда (мысалы, қаржылық операциялар және жүкқұжаттар туралы деректер), жойылады.</li>
               </ol>
             </li>
@@ -356,7 +361,7 @@
                   <em>3.2. Данные Торговых точек (мобильное приложение)</em>
                   <p>Собираемые данные: </p>
                    <ul>
-                     <li>Наименование магазина, юридическое и фактическое адреса;</li>
+                     <li>Наименование магазина, категория магазина, БИН/ИИН, юридический и фактический адрес;</li>
                      <li>Регион, город, контактный телефон и корпоративная почта;</li>
                      <li>ФИО представителя, время работы магазина;</li> 
                      <li>Данные аккаунта: логин (e-mail), телефон, хэшированный пароль.</li>
@@ -413,8 +418,8 @@
                     <li>получать информацию о своих персональных данных, обрабатываемых Оператором;</li>
                     <li>требовать уточнения, блокирования или уничтожения данных, если они являются неполными, устаревшими или незаконно полученными; </li>
                     <li>отзывать согласие на обработку персональных данных; </li>
-                    <li>инициировать удаление аккаунта через мобильное приложение или по запросу на e-mail sauda_tech@outlook.com. Запросы обрабатываются в течение 10 (десяти) рабочих дней с момента получения. Уведомление о результате направляется Пользователю по e-mail или в интерфейсе Сервиса.</li>
-                <li>7.2. После удаления аккаунта данные Пользователя уничтожаются, за исключением сведений, подлежащих хранению в соответствии с законодательством Республики Казахстан (например, данные о финансовых операциях и накладных).</li></ul></li>
+                    <li>инициировать удаление аккаунта через мобильное приложение или по запросу на e-mail sauda_tech@outlook.com. Запросы обрабатываются в течение 10 (десяти) рабочих дней с момента получения. Уведомление о результате направляется Пользователю по e-mail или в интерфейсе Сервиса.</li></ul>
+                <li>7.2. После удаления аккаунта данные Пользователя уничтожаются, за исключением сведений, подлежащих хранению в соответствии с законодательством Республики Казахстан (например, данные о финансовых операциях и накладных).</li>
               </ol>
             </li}$.
 
@@ -505,7 +510,7 @@ Contact e-mail: sauda_tech@outlook.com</pre>
                   <em>3.2. Retail Outlet Data (Mobile Application)</em>
                   <p>Collected Data: </p>
                    <ul>
-                    <li>Store name, legal and physical addresses; </li>
+                    <li>Store name, category, BIN, legal and physical addresses; </li>
                       <li> Region, city, contact phone, and corporate e-mail; </li>
                         <li> Representative’s full name, store working hours;</li> 
                           <li> Account details: login (e-mail), phone number, hashed password.</li></ul>
