--- a/index.html
+++ b/index.html
@@ -559,7 +559,13 @@ Contact e-mail: sauda_tech@outlook.com</pre>
             <li>
               <strong>7. Rights of the Data Subject</strong>
               <ol>
-                <li>7.1. The User has the right to: obtain information regarding their personal data processed by the Operator; request rectification, blocking, or deletion of data if they are incomplete, outdated, or unlawfully obtained; withdraw consent for personal data processing; request account deletion via the mobile application or by sending a request to sauda_tech@outlook.com. Requests are processed within ten (10) business days from receipt. Notification of the result is sent to the User by e-mail or via the Service interface.</li>
+                <li>
+                  <p>7.1. The User has the right to: </p>
+                  <ul>
+                    <li>obtain information regarding their personal data processed by the Operator;</li> 
+                    <li>request rectification, blocking, or deletion of data if they are incomplete, outdated, or unlawfully obtained;</li>
+                    <li>withdraw consent for personal data processing;</li>
+                    <li>request account deletion via the mobile application or by sending a request to sauda_tech@outlook.com. Requests are processed within ten (10) business days from receipt. Notification of the result is sent to the User by e-mail or via the Service interface.</li></ul></li>
                 <li>7.2. Upon account deletion, the User’s data are destroyed, except for information required to be retained under the laws of the Republic of Kazakhstan (for example, financial and invoice-related records).</li>
               </ol>
             </li>
